--- a/usage/yaml_inputs/App 11-Kubernetes (EKS)-Worker Node-EC2-Network-Connectivity.yaml
+++ b/usage/yaml_inputs/App 11-Kubernetes (EKS)-Worker Node-EC2-Network-Connectivity.yaml
@@ -1,7 +1,7 @@
 Generate: 
-  - App 10-Processor SMM:
-      experiment scenario: Processor SSM # Everything else
-      target application: App 10  # App
+  - App 11-Kubernetes (EKS)-Worker Node-EC2-Network-Inbound/OutBound Connectivity:
+      experiment scenario: Kubernetes (EKS)-Worker Node-EC2-Network-Inbound/OutBound Connectivity #Everything else
+      target application: App 11  # App
 
 # The following build out experiment building blocks. Need only set up once and update/change accordingly. 
 
@@ -10,36 +10,24 @@ Generate:
 
 # Experiment Method will hit the /method route. Must follow method_name: [func1, func2,...] pattern. Can provide a list
 Scenario Method:
-  - Processor SSM:
+  - Kubernetes (EKS)-Worker Node-EC2-Network-Inbound/OutBound Connectivity:
     - experimentvr.load.actions.load_generate
-    - experimentvr.ec2.actions.elk_stress_network_latency
-    - experimentvr.load.probes.load_probe_relative
-    # - experimentvr.load.actions.load_generate
-    # - experimentvr.ec2.actions.elk_stress_network_latency
-    # - experimentvr.load.probes.load_probe_relative
+    - experimentvr.ec2.actions.stress_all_network_io
 
 # # Method configurations will hit /scenario route. 
 Scenario Configurations: 
-  - term: Processor SSM
+  - term: Kubernetes (EKS)-Worker Node-EC2-Network-Inbound/OutBound Connectivity
     scenario:
       experimentvr.load.actions.load_generate:
         count: 1000
-      experimentvr.ec2.actions.elk_stress_network_latency:
+      experimentvr.ec2.actions.stress_all_network_io:
         targets:
-          - test
-        test_target_type: RANDOM
-        tag_key: tag:Name
-        tag_value: placeholder.k8s.local
-        region: us-east-1
-        interface: eth0
-        delay: '100'
-        duration: '60'
-        ports: '8200 9200 9300 5601 5044 9600 9700'
-      experimentvr.load.probes.load_probe_relative:
-        testday: "`r format(Sys.time(), '%d %B, %Y')`"
-        minutes: 20
-        sla: '250'
-        missed_percent: 65
+          - 'test'
+        test_target_type: 'RANDOM'
+        region: 'us-east-1'
+        tag_key: 'tag:Name'
+        tag_value: 'placeholder.k8s.local'
+        duration: '1'
 
 # # Target application hits /target route. Takes up to 2 lists: target_config and steady state. 
 # # Steady state sets steady state probes and follows identically to /method. 
@@ -47,17 +35,17 @@ Scenario Configurations:
 # # If steady state is set, be sure to include all the arg: val pairs needed to run the probes.
 Target Application Config:
   Parameters:
-    App 10:
+    App 11:
       name_space: resiliency 
-      pod_name_pattern: app 10
+      pod_name_pattern: app 11
       health_check_port: '8080'
       health_check_path: health
       tag_key: tag:Name
       tag_value: placeholder.k8s.local
       region: us-east-1
-      output_s3_bucket_name: test
+      output_s3_bucket_name: placeholder_bucket
       cluster_name: test
   steady_state:
-    App 10:
+    App 11:
       - experimentvr.k8s.probes.pod_healthy
 
