--- a/usage/yaml_inputs/Kubernetes Cluster (Outposts)-Kubernetes (Self-Managed)-Worker Node-Kubernetes Ingress Controller-State-Termination.yaml
+++ b/usage/yaml_inputs/Kubernetes Cluster (Outposts)-Kubernetes (Self-Managed)-Worker Node-Kubernetes Ingress Controller-State-Termination.yaml
@@ -5,9 +5,9 @@ Generate:
 
 # The following build out experiment building blocks. Need only set up once and update/change accordingly. 
 
-Package: # include if we are uploading a zip containing new modules/packages
-  - C:\Users\ShahRahman\Downloads\chaosaws.zip
-  - C:\Users\ShahRahman\Downloads\experimentvr.zip 
+# Package: # include if we are uploading a zip containing new modules/packages
+#   - C:\Users\ShahRahman\Downloads\chaosaws.zip
+#   - C:\Users\ShahRahman\Downloads\experimentvr.zip 
 
 
 # Experiment Method will hit the /method route. Must follow method_name: [func1, func2,...] pattern. Can provide a list
@@ -16,7 +16,10 @@ Scenario Method:
     - experimentvr.load.actions.load_generate
     - experimentvr.ec2.actions.terminate_instance
     - experimentvr.load.probes.load_probe_relative
-    - experimentvr.load.actions.load_generate
+    - experimentvr.load.actions.load_generate:
+        pauses:
+          before: 30
+        background: True
     - chaosaws.ec2.actions.terminate_instances
     - experimentvr.load.probes.load_probe_relative
 
@@ -27,14 +30,16 @@ Scenario Configurations:
       experimentvr.load.actions.load_generate:
         count: 1000
       experimentvr.ec2.actions.terminate_instance:
-        targets: [TODO-enter-value-here]
+        targets: 
+          - TODO-enter-value-here
       experimentvr.load.probes.load_probe_relative:
         testday: "`r format(Sys.time(), '%d %B, %Y')`"
         minutes: 20
         sla: '250'
         missed_percent: 65
       chaosaws.ec2.actions.terminate_instances:
-        instance_name: TODO-enter-value-here
+        instance_ids: 
+          - TODO-enter-value-here
 
 # # Target application hits /target route. Takes up to 2 lists: target_config and steady state. 
 # # Steady state sets steady state probes and follows identically to /method. 
