--- a/usage/yaml_inputs/App 11-Kubernetes (EKS)-Worker Node-EC2-Resource-High Memory Utilization.yaml
+++ b/usage/yaml_inputs/App 11-Kubernetes (EKS)-Worker Node-EC2-Resource-High Memory Utilization.yaml
@@ -1,6 +1,15 @@
-# Sample template of yaml inputs for the cli tool. 
+Generate: 
+  - App 11-Kubernetes (EKS)-Worker Node-EC2-Resource-High Memory Utilization:
+      experiment scenario: Kubernetes (EKS)-Worker Node-EC2-Resource-High Memory Utilization # Everything else
+      target application: App 11 # App
 
-# Pass the Following in to the scenario command
+# The following build out experiment building blocks. Need only set up once and update/change accordingly. 
+
+# Package: # include if we are uploading a zip containing new modules/packages
+  - C:\Users\ShahRahman\Downloads\chaosaws.zip
+  - C:\Users\ShahRahman\Downloads\experimentvr.zip 
+
+
 # Experiment Method will hit the /method route. Must follow method_name: [func1, func2,...] pattern. Can provide a list
 Scenario Method:
   - Kubernetes (EKS)-Worker Node-EC2-Resource-High Memory Utilization:
@@ -10,16 +19,18 @@ Scenario Method:
           after: 10
     - experimentvr.load.probes.load_probe_relative
 
- # Method configurations will hit /scenario route. 
+# # Method configurations will hit /scenario route. 
 Scenario Configurations: 
-  - name: Kubernetes (EKS)-Worker Node-EC2-Resource-High Memory Utilization
+  - term: Kubernetes (EKS)-Worker Node-EC2-Resource-High Memory Utilization
     scenario:
       experimentvr.load.actions.load_generate:
         count: 1000
       experimentvr.ec2.actions.stress_memory:
+        targets: 
+          - TODO-enter-value-here
         test_target_type: 'RANDOM'
-        # tag_key: overwrite
-        # tag_value: overwrite
+        tag_key: tag:Name
+        tag_value: placeholder.k8s.local
         region: us-east-1
         duration: '300'
         number_of_workers: '1'
@@ -30,37 +41,22 @@ Scenario Configurations:
         sla: '250'
         missed_percent: 65
 
-# Pass into app command
-
 # # Target application hits /target route. Takes up to 2 lists: target_config and steady state. 
 # # Steady state sets steady state probes and follows identically to /method. 
 # # Target config is similar to scenario, except it takes arg: val pairs directly as opposed to sorting by function. 
 # # If steady state is set, be sure to include all the arg: val pairs needed to run the probes.
 Target Application Config:
   Parameters:
-    Vertical Broker:
-      name_space: broker-1
-      pod_name_pattern: vr-broker
+    App 11:
+      name_space: resiliency 
+      pod_name_pattern: app 11
       health_check_port: '8080'
       health_check_path: health
-      tag_key: eks.amazonaws.com/nodegroup
-      tag_value: linux-Vertical-prod-use1-us-east-1a-1094902943
+      tag_key: tag:Name
+      tag_value: placeholder.k8s.local
       region: us-east-1
-      cluster_name: broker-cluster-use1
-  Steady state:
-    Vertical Broker:
+      output_s3_bucket_name: placeholder_bucket
+      cluster_name: test
+  steady_state:
+    App 11:
       - experimentvr.k8s.probes.pod_healthy
-
-# For deleting, uncomment to use
-
-# Target Application Delete:
-#   Parameters:
-#     - Vertical Broker
-#   Steady state:
-#     - Vertical Broker
-
-# Scenario Method Delete:
-#   - Kubernetes (EKS)-Worker Node-EC2-Resource-High Memory Utilization
-
-# Scenario Config Delete:
-#   - Kubernetes (EKS)-Worker Node-EC2-Resource-High Memory Utilization
