--- a/usage/yaml_inputs/sample.yaml
+++ b/usage/yaml_inputs/sample.yaml
@@ -16,7 +16,7 @@ Scenario Method:
 
 # # Method configurations will hit /scenario route. 
 Scenario Configurations: 
-  - term: Blackhole DNS
+  - name: Blackhole DNS
     scenario:
       experimentvr.load.actions.load_generate:
         count: 1000
