--- a/usage/yaml_inputs/App 11-Kubernetes (EKS)-Worker Node-EC2-Network-Connectivity.yaml
+++ b/usage/yaml_inputs/App 11-Kubernetes (EKS)-Worker Node-EC2-Network-Connectivity.yaml
@@ -16,7 +16,7 @@ Scenario Method:
 
 # # Method configurations will hit /scenario route. 
 Scenario Configurations: 
-  - term: Kubernetes (EKS)-Worker Node-EC2-Network-Inbound/OutBound Connectivity
+  - name: Kubernetes (EKS)-Worker Node-EC2-Network-Inbound/OutBound Connectivity
     scenario:
       experimentvr.load.actions.load_generate:
         count: 1000
