--- a/usage/cli_tool/config.ini
+++ b/usage/cli_tool/config.ini
@@ -1,3 +1,3 @@
 [API]
-url = https://933hl6teel.execute-api.us-east-1.amazonaws.com/prod/
+url = https://kucskr5xud.execute-api.us-east-1.amazonaws.com/prod/
 
